--- a/nico/_theme/templates/page.html
+++ b/nico/_theme/templates/page.html
@@ -1,13 +1,13 @@
 {% extends "layout.html" %}
 {%- block afterstyle %}
 <style type="text/css">
-.handy-module{
+.frozen-module{
   margin: 20px 0 50px;
 }
-.handy-module-content{
+.frozen-module-content{
   padding: 20px 0 50px;
 }
-.handy-module-content h3{
+.frozen-module-content h3{
   margin: 40px 0 20px;
 }
 .highlight{
@@ -16,9 +16,9 @@
 </style>
 {%- endblock %}
 {% block content %}
-<article class="handy-module">
-  <h1 class="handy-module-title">{{post.title}}</h1>
-  <div class="handy-module-content">
+<article class="frozen-module">
+  <h1 class="frozen-module-title">{{post.title}}</h1>
+  <div class="frozen-module-content">
   {{ post.html }}
   </div>
 </article>
